Saturday Coding Challenges 3 - Android Login-Signup challenge

--- a/app/src/main/res/layout/layout_signup.xml
+++ b/app/src/main/res/layout/layout_signup.xml
@@ -10,8 +10,8 @@
 
     <ImageView
         android:id="@+id/imageView2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
         android:layout_marginBottom="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginLeft="8dp"
@@ -20,7 +20,7 @@
         android:layout_marginTop="8dp"
         android:paddingBottom="20dp"
         android:scaleType="centerCrop"
-        android:src="@drawable/ic_account_circle_white_96dp"
+        android:src="@drawable/learn_code_online_logo"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
